2007-02-28  J. Tang  <jtang@tresys.com>

	* added apol_mls_level_create_from_mls_level() and
	apol_mls_range_create_from_mls_range() copy constructors.

	* Fixed segfault when libseaudit attempts to parse certaan load
	policy messages.

2007-02-23  J. Tang  <jtang@tresys.com>

	* Implemented new sediffx results design.  Results are implemented
	as subclasses of an abstract result_item_t class.  This will allow
	easier future modifications of the sediffx interface.

2007-02-21  J. Tang  <jtang@tresys.com>

	* fixed segfault when opening a policy with
	APOL_POLICY_OPTION_NO_RULES when the policy has an unconditional
	type_transition rule.

2007-02-16  J. Mowery  <jmowery@tresys.com>

	* Moved libqpol/include/qpol/expand.h to libqpol/src/expand.h.
	This header file was never supposed to be visible.

	* added SWIG wrappers to libapol; build system updated.  configure
	must be passed --enable-swig-python to build the wrappers.

2007-02-14  J. Tang  <jtang@tresys.com>

	* sesearch and apol now allow searching range transitions based
	upon the target class.  (Target classes were introduced in version
	21 policies.)

	* added to apol_range_trans_query_append_class() to
	libapol/include/apol/rangetrans-query.h

2007-02-06  J. Tang  <jtang@tresys.com>

	* Official release of SETools-3.1.

	* Compile fixes for 64-bit Linux.

2007-02-02  J. Tang  <jtang@tresys.com>

	* added RPM spec files.

2007-01-30  J. Tang  <jtang@tresys.com>

	* fixed error in apol when right-clicking an attribute when a file
	contexts database is loaded.

	* fixed error in SQLite configuration in which a pointer size was
	defined as the size of an integer.  this is a no longer valid
	assumption on 64-bit architectures.

	* if apol has a modular policy loaded, then its "policy version"
	for purposes of permission maps is now set to the maximum policy
	version as defined in libsepol.  this mimics the linking behavior
	of sepol.

2007-01-25  J. Tang  <jtang@tresys.com>
